--- a/public/style.css
+++ b/public/style.css
@@ -2,27 +2,6 @@ body{
     margin: 0px;
 }
 
-.topnav {
-    overflow: hidden;
-    background-color: rgb(30, 215, 96);
-}
-  
-.topnav a {
-    float: left;
-    color: rgb(25, 20, 20);
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 20px;
-    font-family: "Trebuchet MS", "sans-serif";
-    font-weight: bold;
-}
-  
-.topnav a:hover {
-    background-color: rgb(27, 167, 76);
-    cursor: pointer;
-}
-
 .flexParent{
     display: flex;
     flex-direction: row;
@@ -34,6 +13,43 @@ body{
 .mainContent{
     flex: 0.8;
     margin: 3px;
+}
+
+/* NAVBAR */
+.topnav {
+    overflow: hidden;
+    background-color: rgb(30, 215, 96);
+}
+.topnav a {
+    float: left;
+    color: rgb(25, 20, 20);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 20px;
+    font-family: "Trebuchet MS", "sans-serif";
+    font-weight: bold;
+} 
+.topnav a:hover {
+    background-color: rgb(27, 167, 76);
+    cursor: pointer;
+}
+
+/* DETAILS */
+.details{
+    flex: 0.4;
+    border-style: solid;
+    border-radius: 8px;
+    border-color: rgb(30, 215, 96);
+    float: left;
+    width: 98%;
+    height: 350px;
+    margin: 10px;
+    color:rgb(30, 215, 96);
+    content: "";
+    clear: both;
+    display: table;
+    font-family: "Trebuchet MS", "sans-serif";
 }
 
 /* SEARCH RESULTS */
