--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 body{
     margin: 0px;
+    background-color: rgb(25, 20, 20);
 }
 
 .flexParent{
@@ -13,6 +14,21 @@ body{
 .mainContent{
     flex: 0.8;
     margin: 3px;
+}
+
+/* LOGIN */
+.login{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.loginTitle{
+    text-align: center;
+    color: rgb(30, 215, 96);
+    font-size: 20px;
+    font-family: "Trebuchet MS", "sans-serif";
+    font-weight: bold;
 }
 
 /* NAVBAR */
